@@ -1,3 +1,10 @@
+2011-08-22  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/src/Port.cpp: add support for YARP_PORT_PREFIX.
+	If this environment variable is defined, it is added as a prefix
+	to port names by Port::open. [thanks Lorenzo Natale] 
+	[thanks Ali Paikan]
+
 2011-08-19  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* conf/YarpVersion.cmake: version bump to 2.3.10 to incorporate
